cartopy/docs/v0.9/_sources/cartopy_outline.txt

cartopy
*******

.. currentmodule:: cartopy

.. csv-table::


	:py:obj:`config`

cartopy.crs
***********

.. currentmodule:: cartopy.crs

.. csv-table::


	:py:obj:`CRS`, :py:obj:`Geocentric`, :py:obj:`Geodetic`, :py:obj:`Globe`
	:py:obj:`OSGB`, :py:obj:`OSNI`, :py:obj:`EuroPP`, :py:obj:`Geostationary`
	:py:obj:`Gnomonic`, :py:obj:`InterruptedGoodeHomolosine`, :py:obj:`LambertConformal`, :py:obj:`LambertCylindrical`
	:py:obj:`Mercator`, :py:obj:`Miller`, :py:obj:`Mollweide`, :py:obj:`NorthPolarStereo`
	:py:obj:`Orthographic`, :py:obj:`PlateCarree`, :py:obj:`Projection`, :py:obj:`Robinson`
	:py:obj:`RotatedPole`, :py:obj:`SouthPolarStereo`, :py:obj:`Stereographic`, :py:obj:`TransverseMercator`
	:py:obj:`RotatedGeodetic`

cartopy.feature
***************

.. currentmodule:: cartopy.feature

.. csv-table::


	:py:obj:`Feature`, :py:obj:`GSHHSFeature`, :py:obj:`NaturalEarthFeature`, :py:obj:`ShapelyFeature`
	:py:obj:`BORDERS`, :py:obj:`COASTLINE`, :py:obj:`LAKES`, :py:obj:`LAND`
	:py:obj:`OCEAN`, :py:obj:`RIVERS`

cartopy.img_transform
*********************

.. currentmodule:: cartopy.img_transform

.. csv-table::


	:py:obj:`mesh_projection`, :py:obj:`regrid`, :py:obj:`warp_array`, :py:obj:`warp_img`

cartopy.trace
*************

.. currentmodule:: cartopy.trace

.. csv-table::


	:py:obj:`project_linear`

cartopy.io
**********

.. currentmodule:: cartopy.io

.. csv-table::


	:py:obj:`fh_getter`, :py:obj:`DownloadWarning`, :py:obj:`Downloader`

cartopy.io.img_nest
*******************

.. currentmodule:: cartopy.io.img_nest

.. csv-table::


	:py:obj:`ImageCollection`, :py:obj:`Img`, :py:obj:`NestedImageCollection`

cartopy.io.img_tiles
********************

.. currentmodule:: cartopy.io.img_tiles

.. csv-table::


	:py:obj:`OSM`, :py:obj:`GoogleTiles`, :py:obj:`MapQuestOSM`, :py:obj:`MapQuestOpenAerial`
	:py:obj:`QuadtreeTiles`

cartopy.io.shapereader
**********************

.. currentmodule:: cartopy.io.shapereader

.. csv-table::


	:py:obj:`Reader`, :py:obj:`Record`

cartopy.io.srtm
***************

.. currentmodule:: cartopy.io.srtm

.. csv-table::


	:py:obj:`SRTM3_retrieve`, :py:obj:`read_SRTM3`, :py:obj:`srtm`, :py:obj:`srtm_composite`
	:py:obj:`SRTM3Downloader`

cartopy.mpl
***********

.. currentmodule:: cartopy.mpl



cartopy.mpl.clip_path
*********************

.. currentmodule:: cartopy.mpl.clip_path

.. csv-table::


	:py:obj:`bbox_to_path`, :py:obj:`clip_path`, :py:obj:`clip_path_python`, :py:obj:`intersection_point`
	:py:obj:`lines_intersect`

cartopy.mpl.feature_artist
**************************

.. currentmodule:: cartopy.mpl.feature_artist

.. csv-table::


	:py:obj:`FeatureArtist`

cartopy.mpl.geoaxes
*******************

.. currentmodule:: cartopy.mpl.geoaxes

.. csv-table::


	:py:obj:`GeoAxes`, :py:obj:`InterProjectionTransform`

cartopy.mpl.gridliner
*********************

.. currentmodule:: cartopy.mpl.gridliner

.. csv-table::


	:py:obj:`Gridliner`

cartopy.mpl.patch
*****************

.. currentmodule:: cartopy.mpl.patch

.. csv-table::


	:py:obj:`geos_to_path`, :py:obj:`path_segments`, :py:obj:`path_to_geos`
